--- a/src/02-video.html
+++ b/src/02-video.html
@@ -10,15 +10,7 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <iframe
-      id="vimeo-player"
-      src="https://player.vimeo.com/video/236203659"
-      width="640"
-      height="360"
-      frameborder="0"
-      allowfullscreen
-      allow="autoplay; encrypted-media"
-    ></iframe>
+    <div id="handstick"></div>
 
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script src="js/02-video.js"></script>
